Working on Favorites

--- a/homepage.html
+++ b/homepage.html
@@ -132,11 +132,11 @@
                                 <td id="change4" class="changes"></td>
                                 <td id="upDown4" class="upDownPct"></td>
                             </tr>
-                            <tr>
+                            <tr id="company-info-5">
                                 <th>5
                                     <i id="star-rank-5" class="blankstar far fa-star" onmouseover="this.className = 'fas fa-star'"; onmouseout="this.className='far fa-star'"></i>
                                 </th>
-                                <td id="compName5"></td>
+                                <td id="compName5" class="comp-Name"></td>
                                 <td id="compSymb5"></td>
                                 <td id="price5"></td>
                                 <td id="change5" class="changes"></td>
@@ -151,9 +151,12 @@
                     <table id="table-2" class="table is-bordered is-striped is-fullwidth is-hoverable">
                         <thead>
                             <tr>
-                                <th title="Header">Rank</th>
+                                <th title="Header">
+                                    <i class='fas fa-star'></i>
+                                </th>
                                 <th>Company</th>
-                                <th>Value</th>
+                                <th>Price</th>
+                                <th>Change</th>
                                 <th title="UpDown">
                                     <i class="fas fa-sort-amount-up"></i>
                                     <i class="fas fa-sort-amount-down"></i>
