--- a/homepage.html
+++ b/homepage.html
@@ -11,22 +11,10 @@
 </head>
 
 <body>
-    <section class="hero">
-        <div class="hero-body">
-            <div class="container">
-                <h1 class="title is-1">
-                    WHAT THE STOCK?
-                </h1>
-                <h4 class="subtitle">
-                    All about stocks
-                </h4>
-            </div>
-        </div>
-    </section>
+
+    <!--PAGE NAVIGATION BAR-->
     <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-
-
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
                 data-target="navbarBasicExample">
                 <span aria-hidden="true"></span>
@@ -34,8 +22,7 @@
                 <span aria-hidden="true"></span>
             </a>
         </div>
-
-        <div id="navbarBasicExample" class="navbar-menu">
+        <div id="navbarWhatTheStock" class="navbar-menu">
             <strong>
                 <div class="navbar-start">
                     <a class="navbar-item is-active" href="homepage.html">
@@ -45,7 +32,7 @@
                         Results
                     </a>
                     <a class="navbar-item" href="industry.html">
-                        Industry
+                        In the News
                     </a>
                     <a class="navbar-item" href="resources.html">
                         Resources
