--- a/homepage.html
+++ b/homepage.html
@@ -11,10 +11,21 @@
 </head>
 
 <body>
-
-    <!--PAGE NAVIGATION BAR-->
     <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
+            <span>
+                <h1 class="title" id="pageTitle">
+                    WHAT THE STOCK?
+                </h1>
+            </span>
+        </div>
+        <div class="navbar-item">
+            <span>
+                <h4 class="title" id="subtitle">
+                    All about stocks
+                </h4>
+            </span>
+
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
                 data-target="navbarBasicExample">
                 <span aria-hidden="true"></span>
@@ -22,23 +33,25 @@
                 <span aria-hidden="true"></span>
             </a>
         </div>
-        <div id="navbarWhatTheStock" class="navbar-menu">
-            <strong>
-                <div class="navbar-start">
-                    <a class="navbar-item is-active" href="homepage.html">
-                        Home
-                    </a>
-                    <a class="navbar-item" href="Results.html">
-                        Results
-                    </a>
-                    <a class="navbar-item" href="industry.html">
-                        In the News
-                    </a>
-                    <a class="navbar-item" href="resources.html">
-                        Resources
-                    </a>
-                </div>
-            </strong>
+        <div class="navbar-end">
+            <div id="navbarWhatTheStock" class="navbar-menu">
+                <strong>
+                    <div class="navbar-start">
+                        <a class="navbar-item is-active" href="homepage.html">
+                            Home
+                        </a>
+                        <a class="navbar-item" href="Results.html">
+                            Results
+                        </a>
+                        <a class="navbar-item" href="industry.html">
+                            In the News
+                        </a>
+                        <a class="navbar-item" href="resources.html">
+                            Resources
+                        </a>
+                    </div>
+                </strong>
+            </div>
         </div>
     </nav>
     <!--END NAV BAR-->
