--- a/industry.html
+++ b/industry.html
@@ -90,10 +90,15 @@ where the user would see the different stocks of that industry -->
                                 <th>Company</th>
                                 <th>Symbol</th>
                                 <th>Price</tn>
-                                <th>Change</th>
                                 <th title="UpDown">
                                     <i class="fas fa-sort-amount-up"></i>
                                     <i class="fas fa-sort-amount-down"></i>
+                                ($)
+                                </th>
+                                <th title="UpDown">
+                                    <i class="fas fa-sort-amount-up"></i>
+                                    <i class="fas fa-sort-amount-down"></i>
+                                (%)
                                 </th>
                             </tr>
                         </thead>
