--- a/resources.html
+++ b/resources.html
@@ -57,8 +57,9 @@
     </nav>
     <!--MAIN CONTENT AREA OF PAGE DIVIDED INTO A BIG LEFT SIDE AND A SIDEBAR ON RIGHT-->
     <section class="section">
+        <div class="container">
         <div class="columns">
-            <div class="column is-three-fifths">
+            <div class="column">
                 <div class="definitionsArea">
                     <h1 class="title">
                         Definitions and Resources
@@ -144,22 +145,18 @@
                 </div>
             </div>
 
-            <div class="column is-two-fifths">
-                <!--TOP TRENDING TABLE FROM HOMEPAGE HTML-->
-                <div class="topTrendTable">
+            <div class="column-is-two-fifths">
+
                 <h2 class="subtitle is-3">Today's Top Trending</h2>
-                <table id="table-1" class="table is-striped is-bordered is-fullwidth is-hoverable">
+                <table id="table-1" class="table is-striped is-bordered is-hoverable">
+
                     <thead>
                         <tr>
                             <th title="Header">Rank</th>
                             <th>Company</th>
-                            <th>Symbol</th>
+
                             <th>Price</tn>
-                            <th title="UpDown">
-                                <i class="fas fa-sort-amount-up"></i>
-                                <i class="fas fa-sort-amount-down"></i>
-                                ($)
-                            </th>
+
                             <th title="UpDown">
                                 <i class="fas fa-sort-amount-up"></i>
                                 <i class="fas fa-sort-amount-down"></i>
@@ -176,9 +173,9 @@
 
                             </th>
                             <td id="compName1"></td>
-                            <td id="compSymb1"></td>
+                            <!-- <td id="compSymb1"></td> -->
                             <td id="price1"></td>
-                            <td id="change1" class="changes"></td>
+                            <!-- <td id="change1" class="changes"></td> -->
                             <td id="upDown1" class="upDownPct"></td>
                         </tr>
                         <tr>
@@ -188,9 +185,9 @@
                                     onmouseout="this.className='far fa-star'"></i>
                             </th>
                             <td id="compName2"></td>
-                            <td id="compSymb2"></td>
+                            <!-- <td id="compSymb2"></td> -->
                             <td id="price2"></td>
-                            <td id="change2" class="changes"></td>
+                            <!-- <td id="change2" class="changes"></td> -->
                             <td id="upDown2" class="upDownPct"></td>
                         </tr>
                         <tr>
@@ -200,9 +197,9 @@
                                     onmouseout="this.className='far fa-star'"></i>
                             </th>
                             <td id="compName3"></td>
-                            <td id="compSymb3"></td>
+                            <!-- <td id="compSymb3"></td> -->
                             <td id="price3"></td>
-                            <td id="change3" class="changes"></td>
+                            <!-- <td id="change3" class="changes"></td> -->
                             <td id="upDown3" class="upDownPct"></td>
                         </tr>
                         <tr>
@@ -212,9 +209,9 @@
                                     onmouseout="this.className='far fa-star'"></i>
                             </th>
                             <td id="compName4"></td>
-                            <td id="compSymb4"></td>
+                            <!-- <td id="compSymb4"></td> -->
                             <td id="price4"></td>
-                            <td id="change4" class="changes"></td>
+                            <!-- <td id="change4" class="changes"></td> -->
                             <td id="upDown4" class="upDownPct"></td>
                         </tr>
                         <tr>
@@ -224,37 +221,37 @@
                                     onmouseout="this.className='far fa-star'"></i>
                             </th>
                             <td id="compName5"></td>
-                            <td id="compSymb5"></td>
+                            <!-- <td id="compSymb5"></td> -->
                             <td id="price5"></td>
-                            <td id="change5" class="changes"></td>
+                            <!-- <td id="change5" class="changes"></td> -->
                             <td id="upDown5" class="upDownPct"></td>
                         </tr>
                 </table>
                 <a href="https://iexcloud.io">Data provided by IEX Cloud</a>
-            </div>
-            <hr>
-                <!--MY FAVORITES TABLE FROM HOMEPAGE HTML-->
-            <div class="myFaveTable">
-                <h2 class="subtitle is-3">My Favorited Stocks</h2>
-                <table id="table-2" class="table is-bordered is-striped is-fullwidth is-hoverable">
-                    <thead>
-                        <tr>
-                            <th title="Header">Rank</th>
-                            <th>Company</th>
-                            <th>Value</th>
-                            <th title="UpDown">
-                                <i class="fas fa-sort-amount-up"></i>
-                                <i class="fas fa-sort-amount-down"></i>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody id="faveTable">
-                    </tbody>
-                </table>
+
+                
+                    <h2 class="subtitle is-3">My Favorited Stocks</h2>
+
+                    <table id="table-2" class="table is-bordered is-striped is-fullwidth is-hoverable">
+                        <thead>
+                            <tr>
+                                <th title="Header">Rank</th>
+                                <th>Company</th>
+                                <th>Price</th>
+                                <th title="UpDown">
+                                    <i class="fas fa-sort-amount-up"></i>
+                                    <i class="fas fa-sort-amount-down"></i>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody id="faveTable">
+
+                        </tbody>
+                    </table>
+               
             </div>
         </div>
-        </div>
-    </div>
+
     </section>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
