--- a/resources.html
+++ b/resources.html
@@ -235,7 +235,9 @@
                     <table id="table-2" class="table is-bordered is-striped is-fullwidth is-hoverable">
                         <thead>
                             <tr>
-                                <th title="Header">Rank</th>
+                                <th title="Header">
+                                    <i class='fas fa-star'></i>
+                                </th>
                                 <th>Company</th>
                                 <th>Price</th>
                                 <th title="UpDown">
