Updating favorites pages

--- a/homepage.html
+++ b/homepage.html
@@ -161,10 +161,15 @@
                                 </th>
                                 <th>Company</th>
                                 <th>Price</th>
-                                <th>Change</th>
+                                <th>
+                                    <i class="fas fa-sort-amount-up"></i>
+                                    <i class="fas fa-sort-amount-down"></i>
+                                    ($)
+                                </th>
                                 <th title="UpDown">
                                     <i class="fas fa-sort-amount-up"></i>
                                     <i class="fas fa-sort-amount-down"></i>
+                                    (%)
                                 </th>
                             </tr>
                         </thead>
