Application is working pretty well

--- a/homepage.html
+++ b/homepage.html
@@ -58,10 +58,10 @@
     <section class="section">
         <div class="container">
             <h1 class="title" id="#about">
-                ABOUT
+                ABOUT OUR APPLICATION
             </h1>
             <p class="subtitle">
-                This is the purpose of our page!
+                We wanted to create an all-in-one applicaton that would deliver stock prices, market information, and relevant news articles based a user-chosen company. We executed this project using Bulma, a CSS framework based on flexbox, and 3 API's from Alpha Vantage and IEX Cloud. Type in a company name below and try it out for yourself!
             </p>
             <div class=row>
                 <div class="level">
