--- a/Results.html
+++ b/Results.html
@@ -38,7 +38,7 @@
             <div id="navbarWhatTheStock" class="navbar-menu">
                 <strong>
                     <div class="navbar-start">
-                        <a class="navbar-item" href="homepage.html">
+                        <a class="navbar-item" href="index.html">
                             Home
                         </a>
                         <a class="navbar-item is-active" href="Results.html">
